# cmc-archieve

./: .gitattributes  .gitignore  README.md
AcademicResearch/: README.md
AcademicResearch/2017_bachelor_thesis/: Lutov-diplom-2017.odt
AcademicResearch/2018_adversarial_examples/: bibliography.bib  de.py  main.tex
AcademicResearch/2018_intermediate_presentation/: algo.eps  main.tex
AcademicResearch/2019_variational_dropout/: bibliography.bib  main.tex
EighthSemester/CourseWork/: 420_ЛютовВС_отчет.odp  precision_pca.ods  presentation.odp
EighthSemester/reliability/: .gitignore  420_lutov.c  Makefile  README.md  abstract_lts_m12.txt  log.txt  lts_m1.txt  lts_m12.txt  lts_m2.txt  solution.q  solution.txt  solution.xml  states.txt  task.txt
EleventhSemester/cplusplus/: Cpp.mm
EleventhSemester/cplusplus/task03/: .gitignore  CMakeLists.txt  Makefile  README.md  part1.cpp  part2-main.cpp  part2-test.cpp  part2.cpp  part2.h
EleventhSemester/hypercomputing/: .gitignore
FifthSemester/: ApplicationAlgebra.mm  ModelMachine.mm  time.ods
FifthSemester/Economics/: Intellectual-property.odt  Singapore.odt
FifthSemester/SCaPDP/: november.odt  october.odt  september.odt
FifthSemester/cmc-task51/: .gitignore  CMakeLists.txt  ElproConfig.h.in  README.md  main.c  op_rdtsc.h  op_rdtsc32.s  op_rdtsc64.s  profile.c  sum.c
FifthSemester/cmc-task52/: .gitignore  CMakeLists.txt  compare.py
FifthSemester/cmc-task52/controller/: repair.cpp
FifthSemester/cmc-task52/include/model/: canvas.h  canvas.hpp  color.h  component.hpp  draw.hpp  matrix.h  matrix.hpp  messages.h  util.h  util.hpp
FifthSemester/cmc-task52/include/view/: console.h  main.h
FifthSemester/cmc-task52/model/: component.cpp  messages.cpp
FifthSemester/cmc-task52/plugins/: CMakeLists.txt
FifthSemester/cmc-task52/plugins/boxfilter/: boxfilter.cpp
FifthSemester/cmc-task52/plugins/medianfilter/: medianfilter.cpp
FifthSemester/cmc-task52/view/: console.cpp  main.cpp
FifthSemester/cmc-task53/: .gitignore  Doxyfile  compare.py
FifthSemester/cmc-task54/: .gitignore  CMakeLists.txt  Doxyfile.in  README.md
FifthSemester/cmc-task54/data/config/: config.txt
FifthSemester/cmc-task54/data/shaders/: blackhole.glsl  static_vertex.glsl
FifthSemester/cmc-task54/include/: glsl.h  glsl.hpp  main.h  ogl.h
FifthSemester/cmc-task54/src/: draw.cpp  main.cpp  ogl.cpp
FirstSemester/: Матан.mm
FirstSemester/contest13/: LICENSE  README.md
FirstSemester/contest14/: LICENSE  README.md
FirstSemester/contest16/: .gitignore  README.md
FourthSemester/: Autostop.mm  Physics.mm  ProbabilityTheory.mm  PythonProject.odp
FourthSemester/Django-forum/: .gitignore  README.md  requirements.txt
FourthSemester/English/: Artificial-intelligence.odt  Computer-architecture.odt  Computer-network.odt
FourthSemester/MathematicalStatistics/: Big data.mm
FourthSemester/PyGame/: balls.py
FourthSemester/PythonWinter2015-C/: .gitignore  requirements.txt
FourthSemester/PythonWinter2015-TPG/: LICENSE  README.md  caalc.py  test.caalc
FourthSemester/cv-hw/: .gitignore  README.md
FourthSemester/fatransfer/: .gitignore  Faces.m  README.md  fatransfer.m
FourthSemester/imsearch/: Bag.m  Gist.m  README.md  dbscan.m  edge_filters.m  imsearch_gui.fig  imsearch_gui.m  imsearch_test.m
FourthSemester/nnet/: README.md  mnist.py
NinethSemester/: 1917.odt
NinethSemester/English/: Adversarial examples.odt  Annotations.odt  Computer vision.odt
NinethSemester/image_processing/: image_processing.mm
SecondSemester/: Calculus.mm  Mechanics.mm  NumericalAnalysis.mm  OS.mm  Phylosophy.mm  time.ods
SecondSemester/DifferentialEquation/: FirstColloc.mm
SecondSemester/English/: Computer-graphics.odt  LLVM.odt  Wi-fi.odt
SecondSemester/cmc-task-one/src/: CMakeLists.txt  main.c  numan.c
SecondSemester/cmc-task-one/src/tests/: CMakeLists.txt  test_matan.c  test_stdfun.c
SecondSemester/cmc-task-three/: README.md
SecondSemester/cmc-task-two/: .gitignore  README.md
SecondSemester/cmc-task-two/src/: CMakeLists.txt
SecondSemester/cmc-task-two/src/tests/: CMakeLists.txt  test_is_equal.c
SecondSemester/contest21/: README.md
SecondSemester/contest22/: README.md
SecondSemester/contest24/: README.md
SeventhSemester/: Coctails.odt
SeventhSemester/CourseWork/: 420_ЛютовВС_отчет.odp  presentation.odp
SeventhSemester/sociology/: presentation.odp
SixthSemester/CourseWork/: LutovVCourseWork.odt  presentation.odp
ThirdSemester/: Aging.mm
ThirdSemester/ode/: grid_helpers.py  problem.py  report.odt  test.py
ThirdSemester/sle/: matrix_functions.py  report.odt  sle  test.py
TwelvethSemester/: Lutov_presentation.odp
TwelvethSemester/MIPS/: task0.asm  task1.asm  task2.asm  task3.asm  task4.asm  task5.asm
TwelvethSemester/opencl/task01/: ApplyFilter.cl  CMakeLists.txt  README.md  main.cxx
contest11/: README.md
contest11/src/: problem01-08.c  problem01-10.c  problem01-12.c  problem01-14.c  problem01-15.c  problem01-16.c  problem01-19.c
contest13/src/: problem03-12.c  problem03-16.c  problem03-18.c  problem03-19.c  problem03-20.c  problem03-3.c  problem03-5.c  template.c
contest14/src/: problem04-04.c  problem04-09.c  template.c
contest15/: README.md
contest15/src/: problem05-04.c  problem05-07.c  problem05-08.c  treap.template.h  vector.template.h
contest16/src/: problem06-04.c  problem06-06.c  problem06-14.c  problem06-16.c
eighth_semester/compilers/: task1.txt
fifth_semester/cmc-task51/: profile.h  sum.h
fifth_semester/cmc-task52/: README.md  build-static.sh  test.sh
fifth_semester/cmc-task53/: Makefile  README.md
fourth_semester/English/: Artificial-intelligence.odt  Computer-architecture.odt  Computer-network.odt
fourth_semester/PyGame/: README.md
fourth_semester/PythonWinter2015-C/: README.md
fourth_semester/fatransfer/: fatransfer_make.m
fourth_semester/imsearch/: .gitignore  imsearch_make.m  show_distance.m  show_images.m
fourth_semester/nnet/: .gitignore
second_semester/cmc-task-one/: README.md
second_semester/cmc-task-three/: Makefile
second_semester/contest23/: README.md
(+642 files in other folders)
